Add btn-light class

--- a/src/main/resources/templates/jsf/form.html
+++ b/src/main/resources/templates/jsf/form.html
@@ -63,7 +63,7 @@
         <div></div>
       </th:block>
       <th:block th:unless="${item.hasBackPathname}">
-        <button class="btn" type="submit">Return</button>
+        <button class="btn btn-light" type="submit">Return</button>
       </th:block>
     </react-form>
 
@@ -99,7 +99,7 @@
         <div></div>
       </th:block>
       <th:block th:unless="${item.hasBackPathname}">
-        <button class="btn" type="submit">Return</button>
+        <button class="btn btn-light" type="submit">Return</button>
       </th:block>
     </react-form>
 
