--- a/src/main/resources/templates/jsf/form.html
+++ b/src/main/resources/templates/jsf/form.html
@@ -63,7 +63,8 @@
         <div></div>
       </th:block>
       <th:block th:unless="${item.hasBackPathname}">
-        <button class="btn btn-light" type="submit">Return</button>
+        <button class="btn btn-light" type="submit">[[${#messages.msgOrNull('ui.return') ?:
+          'Return'}]]</button>
       </th:block>
     </react-form>
 
@@ -80,13 +81,13 @@
 </div>
 
 <div th:fragment="show-edit"
-  th:with="user=${@user}, item=${item}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, backTargetId=${backTargetId ?: ajaxTargetId}, embeddedId=${embeddedId ?: ajaxTargetId}"
+  th:with="user=${T(com.github.wnameless.spring.boot.up.SpringBootUp).containsBean('user') ? @user : null}, item=${item}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, backTargetId=${backTargetId ?: ajaxTargetId}, embeddedId=${embeddedId ?: ajaxTargetId}"
   class="card">
   <div class="card-header">
     <div class="d-flex">
       <button hx:get="${item.backPath}" hx:target="${'#' + backTargetId}" hx-ext="json-enc"
         type="button" class="me-auto btn-close" aria-label="Close"></button>
-      <a th:if="${user != null && user.canUpdate(item)}" class="pe-2 orange"
+      <a th:if="${user == null || (user != null && user.canUpdate(item))}" class="pe-2 orange"
         th:href="${item.editPath}"
         hx:get="@{${item.editPath}(ajaxTargetId=${embeddedId}, backTargetId=${ajaxTargetId})}"
         hx:target="${'#' + embeddedId}" hx-ext="json-enc">
@@ -100,7 +101,8 @@
         <div></div>
       </th:block>
       <th:block th:unless="${item.hasBackPathname}">
-        <button class="btn btn-light" type="submit">Return</button>
+        <button class="btn btn-light" type="submit">[[${#messages.msgOrNull('ui.return') ?:
+          'Return'}]]</button>
       </th:block>
     </react-form>
 
