--- a/src/main/resources/templates/jsf/datatable.html
+++ b/src/main/resources/templates/jsf/datatable.html
@@ -2,7 +2,7 @@
 
 <!-- Start Table -->
 <div th:fragment="crud(th, td)"
-  th:with="route=${route}, user=${T(com.github.wnameless.spring.boot.up.SpringBootUp).containsBean('user') ? @user : null}, page=${page}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, queryConfig=${queryConfig}">
+  th:with="route=${route}, user=${T(com.github.wnameless.spring.boot.up.SpringBootUp).containsBean(@webModelAttribute.USER) ? T(com.github.wnameless.spring.boot.up.SpringBootUp).getBean(@webModelAttribute.USER) : null}, page=${page}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, queryConfig=${queryConfig}">
   <div class="offcanvas offcanvas-end" tabindex="-1" id="filterOption">
     <div class="offcanvas-header">
       <h4>[[${#messages.msgOrNull('jsf.datatable.filter_option.title') ?: 'Filter Option'}]]</h4>
