--- a/src/main/resources/templates/fsm/action.html
+++ b/src/main/resources/templates/fsm/action.html
@@ -7,13 +7,13 @@
     <div class="d-grid gap-2 d-md-flex justify-content-md-start pb-2">
       <button type="button" class="btn btn-outline-primary">
         <i class="fas fa-route"></i>
-        [[${item.stateMachine.state.name}]]
+        [[${item.phase.stateMachine.state.name}]]
       </button>
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-outline-success">
           <i class="fas fa-location-arrow"></i>
         </button>
-        <th:block th:each="trigger : ${item.externalTriggers}">
+        <th:block th:each="trigger : ${item.phase.externalTriggers}">
           <button type="button" class="btn btn-outline-success"
             hx:get="${item.joinPath('triggers', trigger.name)}" hx:target="${'#' + ajaxTarget}"
             hx-ext="json-enc">[[${trigger.name}]]</button>
@@ -38,7 +38,7 @@
       <button class="nav-link active" data-bs-toggle="tab"
         th:attr="data-bs-target=${'#mainForm' + fid}" type="button" role="tab">Main</button>
     </li>
-    <li th:if="${item.stateRecord.hasViewableForm(item.stateMachine)}" class="nav-item"
+    <li th:if="${item.phase.stateRecord.hasViewableForm(item.phase.stateMachine)}" class="nav-item"
       role="presentation">
       <button class="nav-link" data-bs-toggle="tab" th:attr="data-bs-target=${'#stateForm' + fid}"
         type="button" role="tab">State Forms</button>
@@ -48,12 +48,12 @@
     <div class="tab-pane fade show active" th:id="${'mainForm' + fid}" role="tabpanel">
       <div th:replace="~{jsf/form :: show-edit(item=${item}, ajaxTargetId=${ajaxTargetId})}"></div>
     </div>
-    <div th:if="${item.stateRecord.hasViewableForm(item.stateMachine)}" class="tab-pane fade"
-      th:id="${'stateForm' + fid}" role="tabpanel">
-      <th:block th:if="${item.stateRecord.hasForm}">
-        <th:block th:each="stateForm :${item.stateRecord.state.forms}"
+    <div th:if="${item.phase.stateRecord.hasViewableForm(item.phase.stateMachine)}"
+      class="tab-pane fade" th:id="${'stateForm' + fid}" role="tabpanel">
+      <th:block th:if="${item.phase.stateRecord.hasForm}">
+        <th:block th:each="stateForm :${item.phase.stateRecord.state.forms}"
           th:with="rid=${(T(java.lang.Math).random() * 10000).intValue()}">
-          <div th:if="${item.stateMachine.canFire(stateForm.viewableTriggerStock.get)}"
+          <div th:if="${item.phase.stateMachine.canFire(stateForm.viewableTriggerStock.get)}"
             th:id="${'embedded' + rid}" class="pt-2">
             <a hx:target="${'#embedded' + rid}"
               hx:get="@{${item.joinPath('forms', stateForm.formTypeStock.get)}(ajaxTargetId=${'embedded' + rid})}"
