--- a/src/main/resources/templates/jsf/datatable.html
+++ b/src/main/resources/templates/jsf/datatable.html
@@ -2,7 +2,7 @@
 
 <!-- Start Table -->
 <div th:fragment="crud(th, td)"
-  th:with="page=${__${@webModelAttribute.PAGE}__}, itemClass=${__${@webModelAttribute.ITEM_CLASS}__}, route=${__${@webModelAttribute.ROUTE}__}, user=${T(com.github.wnameless.spring.boot.up.SpringBootUp).containsBean(@webModelAttribute.USER) ? T(com.github.wnameless.spring.boot.up.SpringBootUp).getBean(@webModelAttribute.USER) : null}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}">
+  th:with="page=${__${@webModelAttribute.PAGE}__}, itemClass=${__${@webModelAttribute.ITEM_CLASS}__}, route=${__${@webModelAttribute.ROUTE}__}, user=${__${@webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}">
   <div class="offcanvas offcanvas-end" tabindex="-1" id="filterOption">
     <div class="offcanvas-header">
       <h4>[[${#messages.msgOrNull('jsf.datatable.filter_option.title') ?: 'Filter Option'}]]</h4>
