--- a/src/main/resources/templates/fsm/action.html
+++ b/src/main/resources/templates/fsm/action.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="bar"
-  th:with="item=${item}, ajaxTarget=${ajaxTarget ?: @webModelAttribute.AJAX_TARGET_ID}"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}"
   class="card mb-2">
   <div class="card-body">
     <div class="d-grid gap-2 d-md-flex justify-content-md-start pb-2">
@@ -15,7 +15,7 @@
         </button>
         <th:block th:each="trigger : ${item.phase.externalTriggers}">
           <button type="button" class="btn btn-outline-success"
-            hx:get="${item.joinPath('triggers', trigger.name)}" hx:target="${'#' + ajaxTarget}"
+            hx:get="${item.joinPath('triggers', trigger.name)}" hx:target="${'#' + ajaxTargetId}"
             hx-ext="json-enc">[[${trigger.name}]]</button>
         </th:block>
       </div>
@@ -23,16 +23,16 @@
   </div>
 </div>
 
-<div th:fragment="status" th:with="item=${item}"
+<div th:fragment="status" th:with="item=${__${@webModelAttribute.ITEM}__}"
   class="d-grid gap-2 d-md-flex justify-content-md-start pb-2">
   <button type="button" class="btn btn-outline-primary">
     <i class="fas fa-diagram-project"></i>
-    [[${item.stateMachine.state.name}]]
+    [[${item.phase.stateMachine.state.name}]]
   </button>
 </div>
 
 <div th:fragment="editor"
-  th:with="item=${item}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, fid=${(T(java.lang.Math).random() * 10000).intValue()}">
+  th:with="item=${__${@webModelAttribute.ITEM}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, fid=${(T(java.lang.Math).random() * 10000).intValue()}">
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" data-bs-toggle="tab"
@@ -46,7 +46,9 @@
   </ul>
   <div class="tab-content">
     <div class="tab-pane fade show active" th:id="${'mainForm' + fid}" role="tabpanel">
-      <div th:replace="~{jsf/form :: show-edit(item=${item}, ajaxTargetId=${ajaxTargetId})}"></div>
+      <div
+        th:replace="~{jsf/form :: show-edit-alt(editable=${item.phase.updatable.accessControlRuleStock.getAsBoolean}, item=${__${@webModelAttribute.ITEM}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET})}">
+      </div>
     </div>
     <div th:if="${item.phase.stateRecord.hasViewableForm(item.phase.stateMachine)}"
       class="tab-pane fade" th:id="${'stateForm' + fid}" role="tabpanel">
@@ -56,7 +58,7 @@
           <div th:if="${item.phase.stateMachine.canFire(stateForm.viewableTriggerStock.get)}"
             th:id="${'embedded' + rid}" class="pt-2">
             <a hx:target="${'#embedded' + rid}"
-              hx:get="@{${item.joinPath('forms', stateForm.formTypeStock.get)}(ajaxTargetId=${'embedded' + rid})}"
+              hx:get="@{${item.joinPath('forms', stateForm.formTypeStock.get)}(ajaxTargetId=${'embedded' + rid}, backTargetId=${ajaxTargetId})}"
               hx-ext="json-enc" hx-trigger="load"></a>
           </div>
         </th:block>
