--- a/src/main/resources/templates/jsf/datatable.html
+++ b/src/main/resources/templates/jsf/datatable.html
@@ -2,7 +2,7 @@
 
 <!-- Start Table -->
 <div th:fragment="crud(th, td)"
-  th:with="page=${__${@webModelAttribute.PAGE}__}, itemClass=${__${@webModelAttribute.ITEM_CLASS}__}, route=${__${@webModelAttribute.ROUTE}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}">
+  th:with="page=${__${@webModelAttribute.PAGE}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, itemClass=${__${@webModelAttribute.ITEM_CLASS}__}, route=${__${@webModelAttribute.ROUTE}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}">
   <div class="offcanvas offcanvas-end" tabindex="-1" id="filterOption">
     <div class="offcanvas-header">
       <h4>[[${#messages.msgOrNull('jsf.datatable.filter_option.title') ?: 'Filter Option'}]]</h4>
@@ -88,13 +88,13 @@
             <ul class="dropdown-menu">
               <li>
                 <a th:classappend="${user == null || (user != null && user.canUpdate(item))} ? 'text-primary' : 'disabled'"
-                  hx:get="${item.editPath}" hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc"
-                  class="dropdown-item">
+                  hx:get="${queryConfig == null ? item.editPath : item.getEditPath(queryConfig)}"
+                  hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc" class="dropdown-item">
                   [[${#messages.msgOrNull('ui.edit') ?: 'Edit'}]]</a>
               </li>
               <li>
                 <a th:classappend="${user == null || (user != null && user.canDelete(item))} ? 'text-danger' : 'disabled'"
-                  hx:delete="${item.deletePath}"
+                  hx:delete="${queryConfig == null ? item.deletePath : item.getDeletePath(queryConfig)}"
                   hx:confirm="${#messages.msgOrNull('ui.confirmation.delete') ?: 'Are you sure?'}"
                   hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc" class="dropdown-item">
                   [[${#messages.msgOrNull('ui.delete') ?: 'Delete'}]]</a>
