--- a/src/main/resources/templates/jsf/form.html
+++ b/src/main/resources/templates/jsf/form.html
@@ -1,11 +1,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="new"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, backTargetId=${backTargetId ?: ajaxTargetId}"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}"
   class="card">
   <div class="card-header">
-    <button hx:get="${item.getBackPath(queryConfig)}" hx:target="${'#' + backTargetId}"
-      hx-ext="json-enc" type="button" class="me-auto btn-close" aria-label="Close"></button>
+    <button hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+      hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
+      aria-label="Close"></button>
   </div>
   <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 10000000).intValue()}">
     <react-form th:id="${'newForm' + rid}" th:action="${item.createPath}" method="POST"
@@ -25,11 +26,12 @@
 </div>
 
 <div th:fragment="edit"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, backTargetId=${backTargetId ?: ajaxTargetId}"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}"
   class="card">
   <div class="card-header">
-    <button hx:get="${item.getBackPath(queryConfig)}" hx:target="${'#' + backTargetId}"
-      hx-ext="json-enc" type="button" class="me-auto btn-close" aria-label="Close"></button>
+    <button hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+      hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
+      aria-label="Close"></button>
   </div>
   <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 10000000).intValue()}">
     <react-form th:id="${'editForm' + rid}"
@@ -50,11 +52,12 @@
 </div>
 
 <div th:fragment="show"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, backTargetId=${backTargetId ?: ajaxTargetId}"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}"
   class="card">
   <div class="card-header">
-    <button hx:get="${item.getBackPath(queryConfig)}" hx:target="${'#' + backTargetId}"
-      hx-ext="json-enc" type="button" class="me-auto btn-close" aria-label="Close"></button>
+    <button hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+      hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
+      aria-label="Close"></button>
   </div>
   <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 10000000).intValue()}">
     <react-form th:id="${'showForm' + rid}" th:action="${item.backPath}" method="GET"
@@ -81,22 +84,64 @@
 </div>
 
 <div th:fragment="show-edit"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET_ID}, backTargetId=${backTargetId ?: ajaxTargetId}, embeddedId=${embeddedId ?: ajaxTargetId}"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}, embeddedTargetId=${embeddedTargetId ?: ajaxTargetId}"
   class="card">
   <div class="card-header">
     <div class="d-flex">
-      <button hx:get="${item.getBackPath(queryConfig)}" hx:target="${'#' + backTargetId}"
-        hx-ext="json-enc" type="button" class="me-auto btn-close" aria-label="Close"></button>
+      <button hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+        hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
+        aria-label="Close"></button>
       <a th:if="${user == null || (user != null && user.canUpdate(item))}" class="pe-2 orange"
-        th:href="${item.editPath}"
-        hx:get="@{${item.editPath}(ajaxTargetId=${embeddedId}, backTargetId=${ajaxTargetId})}"
-        hx:target="${'#' + embeddedId}" hx-ext="json-enc">
+        th:href="${queryConfig == null ? item.editPath : item.getEditPath(queryConfig)}"
+        hx:get="@{${item.editPath}(ajaxTargetId=${embeddedTargetId}, backTargetId=${backTargetId})}"
+        hx:target="${'#' + embeddedTargetId}" hx-ext="json-enc">
         <i class="fas fa-edit"></i></a>
     </div>
   </div>
   <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 10000000).intValue()}">
-    <react-form th:id="${'showEditForm' + rid }" th:action="${item.backPath}" method="GET"
-      ajax:target="${ajaxTargetId}" disabled="true">
+    <react-form th:id="${'showEditForm' + rid }"
+      th:action="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+      method="GET" ajax:target="${ajaxTargetId}" disabled="true">
+      <th:block th:if="${item.hasBackPathname}">
+        <div></div>
+      </th:block>
+      <th:block th:unless="${item.hasBackPathname}">
+        <button class="btn btn-light" type="submit">[[${#messages.msgOrNull('ui.return') ?:
+          'Return'}]]</button>
+      </th:block>
+    </react-form>
+
+    <script th:inline="javascript">
+      var formDataset = /*[[${item.toDataset()}]]*/ null;
+      var showEditFormId = /*[[${'showEditForm' + rid}]]*/ null;
+      var showEditForm = document.getElementById(showEditFormId);
+      showEditForm.setAttribute('props-var', 'formDataset');
+    </script>
+  </div>
+  <script th:inline="javascript" defer>
+    htmx.process(document.getElementById(/*[[${ajaxTargetId}]]*/ null));
+  </script>
+</div>
+
+<div th:fragment="show-edit-alt"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}, embeddedTargetId=${embeddedTargetId ?: ajaxTargetId}"
+  class="card">
+  <div class="card-header">
+    <div class="d-flex">
+      <button hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+        hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
+        aria-label="Close"></button>
+      <a th:if="${editable}" class="pe-2 orange"
+        th:href="${queryConfig == null ? item.editPath : item.getEditPath(queryConfig)}"
+        hx:get="@{${item.editPath}(ajaxTargetId=${embeddedTargetId}, backTargetId=${backTargetId})}"
+        hx:target="${'#' + embeddedTargetId}" hx-ext="json-enc">
+        <i class="fas fa-edit"></i></a>
+    </div>
+  </div>
+  <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 10000000).intValue()}">
+    <react-form th:id="${'showEditForm' + rid }"
+      th:action="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+      method="GET" ajax:target="${ajaxTargetId}" disabled="true">
       <th:block th:if="${item.hasBackPathname}">
         <div></div>
       </th:block>
