--- a/src/main/resources/templates/jsf/datatable.html
+++ b/src/main/resources/templates/jsf/datatable.html
@@ -2,7 +2,7 @@
 
 <!-- Start Table -->
 <div th:fragment="crud(th, td)"
-  th:with="page=${__${@webModelAttribute.PAGE}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, itemClass=${__${@webModelAttribute.ITEM_CLASS}__}, route=${__${@webModelAttribute.ROUTE}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}">
+  th:with="li=${li}, page=${__${@webModelAttribute.PAGE}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, itemClass=${__${@webModelAttribute.ITEM_CLASS}__}, route=${__${@webModelAttribute.ROUTE}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}">
   <div class="offcanvas offcanvas-end" tabindex="-1" id="filterOption">
     <div class="offcanvas-header">
       <h4>[[${#messages.msgOrNull('jsf.datatable.filter_option.title') ?: 'Filter Option'}]]</h4>
@@ -99,6 +99,9 @@
                   hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc" class="dropdown-item">
                   [[${#messages.msgOrNull('ui.delete') ?: 'Delete'}]]</a>
               </li>
+              <th:block th:if="${li}">
+                <th:block th:replace="${li}"></th:block>
+              </th:block>
             </ul>
           </div>
         </th>
