--- a/src/main/resources/templates/jsf/form.html
+++ b/src/main/resources/templates/jsf/form.html
@@ -9,8 +9,9 @@
       aria-label="Close"></button>
   </div>
   <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 10000000).intValue()}">
-    <react-form th:id="${'newForm' + rid}" th:action="${item.createPath}" method="POST"
-      ajax:target="${ajaxTargetId}">
+    <react-form th:id="${'newForm' + rid}"
+      th:action="@{${item.createPath}(ajaxTargetId=${ajaxTargetId}, backTargetId=${backTargetId})}"
+      method="POST" ajax:target="${ajaxTargetId}">
     </react-form>
 
     <script th:inline="javascript">
