--- a/src/main/resources/templates/attachments/snapshot.html
+++ b/src/main/resources/templates/attachments/snapshot.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="panel" class="m-2">
+<div th:fragment="panel" class="m-2 pt-2 border-top">
 
   <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
     <li class="nav-item" role="presentation">
