Ready for message component

--- a/src/main/resources/templates/sbu/attachments/snapshot.html
+++ b/src/main/resources/templates/sbu/attachments/snapshot.html
@@ -77,11 +77,11 @@
 </div>
 
 <div th:fragment="edit">
-  <div th:replace="~{jsf/form :: edit}"></div>
+  <div th:replace="~{sbu/jsf/form :: edit}"></div>
 </div>
 
 <div th:fragment="upload">
-  <div th:replace="~{jsf/form :: new}"></div>
+  <div th:replace="~{sbu/jsf/form :: new}"></div>
 </div>
 
 </html>
