--- a/src/main/resources/templates/sbu/attachments/snapshot.html
+++ b/src/main/resources/templates/sbu/attachments/snapshot.html
@@ -8,12 +8,14 @@
         data-bs-target="#pills-file-list" type="button" role="tab">File
         List</button>
     </li>
-    <li class="nav-item" role="presentation">
+    <li th:if="${user == null || (user != null && user.canDelete(item))}" class="nav-item"
+      role="presentation">
       <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
         data-bs-target="#pills-file-edit" type="button" role="tab">File
         Edit</button>
     </li>
-    <li class="nav-item" role="presentation">
+    <li th:if="${user == null || (user != null && user.canUpdate(item))}" class="nav-item"
+      role="presentation">
       <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
         data-bs-target="#pills-file-upload" type="button" role="tab">File
         Upload</button>
@@ -50,7 +52,8 @@
       </div>
     </div>
 
-    <div class="tab-pane fade" id="pills-file-edit" role="tabpanel">
+    <div th:if="${user == null || (user != null && user.canDelete(item))}" class="tab-pane fade"
+      id="pills-file-edit" role="tabpanel">
       <div id="attachmentEdit">
         <a hx:get="@{${item.joinPath('attachments', 'edit')}(ajaxTargetId=${ajaxTargetId})}"
           hx-target="#attachmentEdit" hx-ext="json-enc" hx-trigger="revealed" class="d-none"></a>
@@ -61,7 +64,8 @@
       </div>
     </div>
 
-    <div class="tab-pane fade" id="pills-file-upload" role="tabpanel">
+    <div th:if="${user == null || (user != null && user.canUpdate(item))}" class="tab-pane fade"
+      id="pills-file-upload" role="tabpanel">
       <div id="attachmentUpload">
         <a hx:get="@{${item.joinPath('attachments','upload')}(ajaxTargetId=${ajaxTargetId})}"
           hx-target="#attachmentUpload" hx-ext="json-enc" hx-trigger="revealed" class="d-none"></a>
