--- a/src/main/resources/templates/sbu/jsf/form.html
+++ b/src/main/resources/templates/sbu/jsf/form.html
@@ -1,9 +1,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="new"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}, backable=${backable ?: true}"
   class="card">
-  <div class="card-header">
+  <div class="card-header" th:if="${backable}">
     <button hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
       hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
       aria-label="Close"></button>
@@ -27,9 +27,9 @@
 </div>
 
 <div th:fragment="edit"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}, backable=${backable ?: true}"
   class="card">
-  <div class="card-header">
+  <div class="card-header" th:if="${backable}">
     <button hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
       hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
       aria-label="Close"></button>
@@ -53,9 +53,9 @@
 </div>
 
 <div th:fragment="show"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}, backable=${backable ?: true}"
   class="card">
-  <div class="card-header">
+  <div class="card-header" th:if="${backable}">
     <button hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
       hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
       aria-label="Close"></button>
@@ -92,11 +92,12 @@
 </div>
 
 <div th:fragment="show-edit"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}, embeddedTargetId=${embeddedTargetId ?: ajaxTargetId}"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}, embeddedTargetId=${embeddedTargetId ?: ajaxTargetId}, backable=${backable ?: true}"
   class="card">
   <div class="card-header">
     <div class="d-flex">
-      <button hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+      <button th:if="${backable}"
+        hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
         hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
         aria-label="Close"></button>
       <a th:if="${user == null || (user != null && user.canUpdate(item))}" class="pe-2 orange"
@@ -139,11 +140,12 @@
 </div>
 
 <div th:fragment="show-edit-alt"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}, embeddedTargetId=${embeddedTargetId ?: ajaxTargetId}"
+  th:with="item=${__${@webModelAttribute.ITEM}__}, queryConfig=${__${@webModelAttribute.QUERY_CONFIG}__}, user=${__${'@' + @webModelAttribute.USER}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, backTargetId=${backTargetId ?: ajaxTargetId}, embeddedTargetId=${embeddedTargetId ?: ajaxTargetId}, backable=${backable ?: true}"
   class="card">
   <div class="card-header">
     <div class="d-flex">
-      <button hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+      <button th:if="${backable}"
+        hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
         hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
         aria-label="Close"></button>
       <a th:if="${editable}" class="pe-2 orange"
