--- a/src/main/resources/templates/sbu/fsm/action.html
+++ b/src/main/resources/templates/sbu/fsm/action.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="bar"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}"
+  th:with="item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}"
   class="card mb-2">
   <div class="card-body">
     <div class="d-grid gap-2 d-md-flex justify-content-md-start pb-2">
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<div th:fragment="status" th:with="item=${__${@webModelAttribute.ITEM}__}"
+<div th:fragment="status" th:with="item=${__${@webModelAttributes.ITEM_NAME}__}"
   class="d-grid gap-2 d-md-flex justify-content-md-start pb-2">
   <button type="button" class="btn btn-outline-primary">
     <i class="fas fa-diagram-project"></i>
@@ -32,7 +32,7 @@
 </div>
 
 <div th:fragment="editor"
-  th:with="item=${__${@webModelAttribute.ITEM}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET}, fid=${(T(java.lang.Math).random() * 10000).intValue()}">
+  th:with="item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, fid=${(T(java.lang.Math).random() * 10000).intValue()}">
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" data-bs-toggle="tab"
@@ -47,7 +47,7 @@
   <div class="tab-content">
     <div class="tab-pane fade show active" th:id="${'mainForm' + fid}" role="tabpanel">
       <div
-        th:replace="~{sbu/jsf/form :: show-edit-alt(editable=${item.phase.updatable.accessControlRuleStock.getAsBoolean}, item=${__${@webModelAttribute.ITEM}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttribute.AJAX_TARGET})}">
+        th:replace="~{sbu/jsf/form :: show-edit-alt(editable=${item.phase.updatable.accessControlRuleStock.getAsBoolean}, item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE})}">
       </div>
     </div>
     <div th:if="${item.phase.stateRecord.hasViewableForm(item.phase.stateMachine)}"
