--- a/src/main/resources/templates/sbu/action-codes/display.html
+++ b/src/main/resources/templates/sbu/action-codes/display.html
@@ -9,11 +9,19 @@
       <li>
         <a class="dropdown-item" href="#" onclick="copyActionCodeUrl()">Copy</a>
       </li>
-      <li>
+      <li th:if="${singular}">
+        <a hx:post="@{${route.joinPath('action-codes', 'JOIN')}(ajaxTargetId=${ajaxTargetId})}"
+          hx-target="#actionCode" hx-ext="json-enc" class="dropdown-item">Generate</a>
+      </li>
+      <li th:unless="${singular}">
         <a hx:post="@{${item.joinPath('action-codes', 'JOIN')}(ajaxTargetId=${ajaxTargetId})}"
           hx-target="#actionCode" hx-ext="json-enc" class="dropdown-item">Generate</a>
       </li>
-      <li th:if="${code}">
+      <li th:if="${singular} and ${code}">
+        <a hx:delete="@{${route.joinPath('action-codes', 'JOIN', code)}(ajaxTargetId=${ajaxTargetId})}"
+          hx-target="#actionCode" hx-ext="json-enc" class="dropdown-item">Clear</a>
+      </li>
+      <li th:unless="${singular}" th:if="${code}">
         <a hx:delete="@{${item.joinPath('action-codes', 'JOIN', code)}(ajaxTargetId=${ajaxTargetId})}"
           hx-target="#actionCode" hx-ext="json-enc" class="dropdown-item">Clear</a>
       </li>
@@ -23,7 +31,7 @@
   <script th:inline="javascript">
     function copyActionCodeUrl() {
       var pageOrigin = document.location.origin;
-      var actionPath = /*[[${item.joinPath('action-codes', action)}]]*/ null;
+      var actionPath = /*[[${singular ? route.joinPath('action-codes', action) : item.joinPath('action-codes', action)}]]*/ null;
       actionPath = pageOrigin + actionPath;
 
       var copyText = document.getElementById("actionCodeInput");
